12/2/10 change current indicator model from dV/dt to dQ/dt, so that changes to plate area and separation cause current flow
12/2/10 wire up all observers and listeners in the same place in source code, at the end of constructors
# 0.00.50 (46705) Dec 1, 2010
12/1/10 dev version with lots of internal cleanup and a few fixes
11/30/10 clean up CCKStrategyWithRounding, strategy for putting charges on plate surface
11/30/10 fix: zero tick mark is a little off on bar meters
11/30/10 #2593, identify colorblind issues
11/29/10 simplify BottomWire.createShape
11/29/10 remove bogus mvt in WireNode initialization
11/29/10 add Wire.addSegment and removeSegment (thinking ahead to circuit construction)
11/29/10 for Intro tab, center the Plate vector in the E-Field Detector's display area
11/29/10 change EFieldDetectorBodyNode.setShowVectorsPanelVisible to setSimplified
11/29/10 set default exponents on bar meters to be appropriate for startup configuration (10^-13 for all meters)
11/29/10 move duplicated functionality into BarMeter base class
11/29/10 fix: initialize Plate Charge meter and Stored Energy meter to correct values at startup
11/29/10 decided that current "1/n" behavior of dielectric charge spacing is OK, test in interviews
11/29/10 combine connect/disconnect battery buttons into one button, left justify with battery
11/29/10 change "Add/Remove Wires" to "Connect/Disconnect Battery"
11/29/10 fix: Plate Charge bar and overload indicator should be filled with blue when battery polarity flips
11/23/10 handle "Label:" i18n using a single MessageFormat pattern
11/23/10 move constants from BatteryShapeFactory to Battery model element, improve definition of positive terminal
11/23/10 move constants from VoltmeterShapeFactory to Voltmeter model element
11/23/10 add getShapeFactory to model elements, so that view is using the same factory instance as model
11/23/10 remove redundant calls to World.getConstrainedLocation in world bounds observers